Opened 14 years ago
Closed 13 years ago
#1812 closed defect (fixed)
Transport stream with garbage in the beginning shows artefacts
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | mpegts mpeg2video |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Related to ticket #1811 and this user report:
http://ffmpeg.org/pipermail/ffmpeg-user/2012-October/010297.html
If the first 375kb of the misdetection sample are cut away, the sample is auto-detected correctly, but shows artefacts on decoding.
(No artefacts can be seen if the first 400kb of the misdetection sample from ticket #1811 are cut away, so this is not a reception problem.)
$ ffmpeg -i mpeg2artefacts.ts -qscale 2 out.avi
ffmpeg version N-45422-g6254ffe Copyright (c) 2000-2012 the FFmpeg developers
built on Oct 13 2012 12:00:13 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 51. 76.100 / 51. 76.100
libavcodec 54. 65.100 / 54. 65.100
libavformat 54. 32.100 / 54. 32.100
libavdevice 54. 3.100 / 54. 3.100
libavfilter 3. 19.102 / 3. 19.102
libswscale 2. 1.101 / 2. 1.101
libswresample 0. 16.100 / 0. 16.100
libpostproc 52. 1.100 / 52. 1.100
[mpegts @ 0x2050280] Could not detect TS packet size, defaulting to non-FEC/DVHS
[mpeg2video @ 0x2072ae0] mpeg_decode_postinit() failure
Last message repeated 1 times
[mpegts @ 0x2050280] PES packet size mismatch
[mpeg2video @ 0x2072ae0] mpeg_decode_postinit() failure
[mpeg2video @ 0x2072ae0] skipped MB in I frame at 5 7
[mpeg2video @ 0x2072ae0] ac-tex damaged at 5 19
[mpeg2video @ 0x2072ae0] Warning MVs not available
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in I frame
[mpegts @ 0x2050280] PES packet size mismatch
Last message repeated 8 times
[mpegts @ 0x2050280] Could not find codec parameters for stream 4 (Unknown: none ([5][0][0][0] / 0x0005)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2050280] Could not find codec parameters for stream 5 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2050280] Could not find codec parameters for stream 6 (Unknown: none ([12][0][0][0] / 0x000C)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2050280] Could not find codec parameters for stream 7 (Unknown: none ([255][0][0][0] / 0x00FF)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x2050280] Could not find codec parameters for stream 8 (Unknown: none ([255][0][0][0] / 0x00FF)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[NULL @ 0x2092e80] start time is not set in estimate_timings_from_pts
[NULL @ 0x2099340] start time is not set in estimate_timings_from_pts
[NULL @ 0x209f800] start time is not set in estimate_timings_from_pts
[NULL @ 0x20a5cc0] start time is not set in estimate_timings_from_pts
[NULL @ 0x20ac180] start time is not set in estimate_timings_from_pts
[mpegts @ 0x2050280] PES packet size mismatch
Last message repeated 3 times
Input #0, mpegts, from 'mpeg2artefacts.ts':
Duration: 00:00:05.04, start: 40225.173822, bitrate: 4057 kb/s
Program 257
Metadata:
service_name : France 2
service_provider: GR1 A
Program 260
Metadata:
service_name : France 5
service_provider: GR1 A
Stream #0:0[0x140]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 720x576 [SAR 64:45 DAR 16:9], 15000 kb/s, 25.25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:1[0x14a](fra): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16, 192 kb/s
Stream #0:2[0x14b](qad): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16, 192 kb/s
Stream #0:3[0x154](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006) (hearing impaired)
Stream #0:4[0x172]: Unknown: none ([5][0][0][0] / 0x0005)
Stream #0:5[0x173]: Unknown: none ([11][0][0][0] / 0x000B)
Stream #0:6[0x174]: Unknown: none ([12][0][0][0] / 0x000C)
Stream #0:7[0x175]: Unknown: none ([255][0][0][0] / 0x00FF)
Stream #0:8[0x176]: Unknown: none ([255][0][0][0] / 0x00FF)
Program 261
Metadata:
service_name : ?France [0m
service_provider: GR1 A
Program 262
Metadata:
service_name : LCP
service_provider: GR1 A
Program 282
Metadata:
service_name : France 3
service_provider: Nat
Program 368
Metadata:
service_name : TLT
service_provider: Scopus Network Technologies
Please use -q:a or -q:v, -qscale is ambiguous
Output #0, avi, to 'out.avi':
Metadata:
ISFT : Lavf54.32.100
Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 720x576 [SAR 64:45 DAR 16:9], q=2-31, 200 kb/s, 25 tbn, 25 tbc
Stream #0:1(fra): Audio: ac3 ([0] [0][0] / 0x2000), 48000 Hz, stereo, fltp, 192 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (mpeg2video -> mpeg4)
Stream #0:1 -> #0:1 (mp2 -> ac3)
Press [q] to stop, [?] for help
[mpeg2video @ 0x2072ae0] skipped MB in I frame at 5 7
[mpeg2video @ 0x2072ae0] ac-tex damaged at 5 19
[mpeg2video @ 0x2072ae0] Warning MVs not available
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in I frame
[mpeg2video @ 0x2072ae0] invalid mb type in P Frame at 24 8
[mpeg2video @ 0x2072ae0] 00 motion_type at 0 33
[mpeg2video @ 0x2072ae0] Warning MVs not available
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in P frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 36 31
[mpeg2video @ 0x2072ae0] Warning MVs not available
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 30 13
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in P frame
[mpeg2video @ 0x2072ae0] concealing 15 DC, 15 AC, 15 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 26 12
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 24 17
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in P frame
[mpegts @ 0x2050280] PES packet size mismatch
[mp2 @ 0x2080200] Header missing
Error while decoding stream #0:1: Invalid data found when processing input
[mpeg2video @ 0x2072ae0] 00 motion_type at 34 7
[mpeg2video @ 0x2072ae0] concealing 315 DC, 315 AC, 315 MV errors in B frame
[mpeg2video @ 0x2072ae0] concealing 20 DC, 20 AC, 20 MV errors in P frame
[mpeg2video @ 0x2072ae0] concealing 19 DC, 19 AC, 19 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 18 23
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in P frame
[mpeg2video @ 0x2072ae0] slice mismatch
[mpeg2video @ 0x2072ae0] ac-tex damaged at 23 31
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in I frame
[mpeg2video @ 0x2072ae0] invalid mb type in B Frame at 38 13
[mpeg2video @ 0x2072ae0] concealing 154 DC, 154 AC, 154 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 28 9
[mpeg2video @ 0x2072ae0] ac-tex damaged at 24 31
[mpeg2video @ 0x2072ae0] concealing 180 DC, 180 AC, 180 MV errors in P frame
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in P frame
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpeg2video @ 0x2072ae0] mb incr damaged
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 43 22
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] slice mismatch
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] invalid mb type in I Frame at 16 15
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in I frame
[mpeg2video @ 0x2072ae0] concealing 195 DC, 195 AC, 195 MV errors in B frame
[mpeg2video @ 0x2072ae0] concealing 16 DC, 16 AC, 16 MV errors in B frame
[mpeg2video @ 0x2072ae0] concealing 6 DC, 6 AC, 6 MV errors in P frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 24 28
[mpeg2video @ 0x2072ae0] ac-tex damaged at 36 32
[mpeg2video @ 0x2072ae0] invalid mb type in I Frame at 22 22
[mpeg2video @ 0x2072ae0] ac-tex damaged at 35 13
[mpeg2video @ 0x2072ae0] ac-tex damaged at 13 15
[mpeg2video @ 0x2072ae0] concealing 270 DC, 270 AC, 270 MV errors in I frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 36 31
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 19 25
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in P frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 22 4
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 0 28
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in P frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 25 22
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpeg2video @ 0x2072ae0] mb incr damaged
[mpeg2video @ 0x2072ae0] concealing 135 DC, 135 AC, 135 MV errors in B frame
[mpeg2video @ 0x2072ae0] concealing 2 DC, 2 AC, 2 MV errors in P frame
[mpegts @ 0x2050280] PES packet size mismatch
[mp2 @ 0x2080200] Header missing
Error while decoding stream #0:1: Invalid data found when processing input
[mpeg2video @ 0x2072ae0] mb incr damaged
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 2 33
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in P frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 36 9
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpeg2video @ 0x2072ae0] skipped MB in I frame at 27 24
[mpeg2video @ 0x2072ae0] ac-tex damaged at 24 15
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in I frame
[mpeg2video @ 0x2072ae0] concealing 6 DC, 6 AC, 6 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 30 14
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpeg2video @ 0x2072ae0] 00 motion_type at 34 33
[mpeg2video @ 0x2072ae0] concealing 90 DC, 90 AC, 90 MV errors in B frame
[mpegts @ 0x2050280] PES packet size mismatch
[mpeg2video @ 0x2072ae0] invalid mb type in P Frame at 23 13
[mpeg2video @ 0x2072ae0] concealing 136 DC, 136 AC, 136 MV errors in P frame
[mpeg2video @ 0x2072ae0] concealing 4 DC, 4 AC, 4 MV errors in P frame
[mp2 @ 0x2080200] Header missing
Error while decoding stream #0:1: Invalid data found when processing input
[mpeg2video @ 0x2072ae0] 00 motion_type at 18 26
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpeg2video @ 0x2072ae0] ac-tex damaged at 18 13
[mpeg2video @ 0x2072ae0] concealing 45 DC, 45 AC, 45 MV errors in B frame
[mpegts @ 0x2050280] PES packet size mismatch
[mpeg2video @ 0x2072ae0] ac-tex damaged at 20 3
[mpeg2video @ 0x2072ae0] concealing 1485 DC, 1485 AC, 1485 MV errors in B frame
[mp2 @ 0x2080200] incomplete frame
Error while decoding stream #0:1: Invalid data found when processing input
frame= 114 fps=0.0 q=2.0 Lsize= 3768kB time=00:00:05.08 bitrate=6076.7kbits/s
video:3646kB audio:106kB subtitle:0 global headers:0kB muxing overhead 0.432523%
Attachments (1)
Change History (3)
by , 14 years ago
| Attachment: | mpeg2artefacts.ts added |
|---|
comment:1 by , 14 years ago
| Keywords: | mpeg2video added |
|---|
comment:2 by , 13 years ago
| Component: | undetermined → avformat |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in c666c59ac1a9d78cc706fa9708c400d8bf454cda